Reorganizing SessionFactory injection